--- a/app/public/survery.html
+++ b/app/public/survery.html
@@ -8,6 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
@@ -22,7 +23,7 @@
 
 	
     <form>
-    <div id="addTrain" class="form-group">
+    <div id="addUser" class="form-group">
     <div class="panel panel-primary">
     <div class="panel-heading">Tell Me About Yourself</div>
     <div class="panel-body">
@@ -34,7 +35,23 @@
       <input type="text" class="form-control" id="photo">
     </div>
  
-  
+  <!--add code for 10 survey questions-->
+  <h3>Answer the following questions. 5 is strongly agree. 1 is strongly disagree.</h3>
+  <h3>Question 1</h3>
+  <h4>Cats are better than dogs</h4>
+  <div class="dropdown">
+  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select an Option
+  <span class="caret"></span></button>
+  <ul class="dropdown-menu">
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+    <li>4</li>
+    <li>5</li>
+  </ul>
+</div>
+
+
       <button id="submit" type="submit" class="btn btn-primary">Submit</button>
    </div>
    </div>
