--- a/app/public/survery.html
+++ b/app/public/survery.html
@@ -39,7 +39,133 @@
   <!--add code for 10 survey questions-->
   <h3>Answer the following questions. 5 is strongly agree. 1 is strongly disagree.</h3>
   <h3>Question 1</h3>
-  <h4>Cats are better than dogs</h4>
+  <h4>Cats are better than dogs.</h4>
+  <div class="dropdown">
+  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select an Option
+  <span class="caret"></span></button>
+  <ul class="dropdown-menu">
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+    <li>4</li>
+    <li>5</li>
+  </ul>
+</div>
+
+<h3>Question 2</h3>
+  <h4>My ideal plans for a Friday night are streaming something from Netflix because I am exhausted from the coding bootcamp.</h4>
+  <div class="dropdown">
+  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select an Option
+  <span class="caret"></span></button>
+  <ul class="dropdown-menu">
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+    <li>4</li>
+    <li>5</li>
+  </ul>
+</div>
+
+<h3>Question 3</h3>
+  <h4>Ocean Beach is the best beach.</h4>
+  <div class="dropdown">
+  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select an Option
+  <span class="caret"></span></button>
+  <ul class="dropdown-menu">
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+    <li>4</li>
+    <li>5</li>
+  </ul>
+</div>
+
+<h3>Question 4</h3>
+  <h4>IPAs are overrated.</h4>
+  <div class="dropdown">
+  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select an Option
+  <span class="caret"></span></button>
+  <ul class="dropdown-menu">
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+    <li>4</li>
+    <li>5</li>
+  </ul>
+</div>
+
+<h3>Question 5</h3>
+  <h4>I'm excited to see the new Star Wars movie.</h4>
+  <div class="dropdown">
+  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select an Option
+  <span class="caret"></span></button>
+  <ul class="dropdown-menu">
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+    <li>4</li>
+    <li>5</li>
+  </ul>
+</div>
+
+<h3>Question 6</h3>
+  <h4>I don't understand Pumpkin Spiced Lattes.</h4>
+  <div class="dropdown">
+  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select an Option
+  <span class="caret"></span></button>
+  <ul class="dropdown-menu">
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+    <li>4</li>
+    <li>5</li>
+  </ul>
+</div>
+
+<h3>Question 7</h3>
+  <h4>I want to visit other countries and see the world.</h4>
+  <div class="dropdown">
+  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select an Option
+  <span class="caret"></span></button>
+  <ul class="dropdown-menu">
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+    <li>4</li>
+    <li>5</li>
+  </ul>
+</div>
+
+<h3>Question 8</h3>
+  <h4>Someone's taste in music says a lot about them.</h4>
+  <div class="dropdown">
+  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select an Option
+  <span class="caret"></span></button>
+  <ul class="dropdown-menu">
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+    <li>4</li>
+    <li>5</li>
+  </ul>
+</div>
+
+<h3>Question 9</h3>
+  <h4>I love attending live music shows and music festivals.</h4>
+  <div class="dropdown">
+  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select an Option
+  <span class="caret"></span></button>
+  <ul class="dropdown-menu">
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+    <li>4</li>
+    <li>5</li>
+  </ul>
+</div>
+
+<h3>Question 10</h3>
+  <h4>I am not competitive. I play games for fun.</h4>
   <div class="dropdown">
   <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select an Option
   <span class="caret"></span></button>
